# latticeconstructor

./: .readthedocs.yml  API.rst  HISTORY.rst  README.rst  TUTORIALS.rst  db.json  micc.json  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  tutorials.rst
docs/notebooks/: FODO_TRIB.lte  FODO_TRIB.madx  FODO_TRIB.seq  example_001.ipynb
latticeconstructor/: __init__.py  core.py  madx.lark  parse.py
tests/: __init__.py  test_core.py  test_latticeconstructor.py  test_parse.py
