[tool.poetry]
name = "latticeconstructor"
version = "0.2.2"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Tom Mertens <your.email@whatev.er>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/tomerten/latticeconstructor"
homepage = "https://github.com/tomerten/latticeconstructor"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
ipython = "^7.23.1"
nbsphinx = "^0.8.4"
ipykernel = "^5.5.4"
pandoc = "^1.0.2"
LatticeJSON = "^0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"
black = "^21.5b0"
isort = "^5.8.0"
pylint = "^2.8.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
